[package]
name = "hltas"
version = "0.1.0" # remember to update html_root_url
authors = [
    "Ivan Molodetskikh <yalterz@gmail.com>",
    "Chong Jiang Wei <randolphchong@gmail.com>",
]
edition = "2018"
description = "Reading and writing Half-Life TAS scripts (`.hltas`)."
license = "MIT/Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/hltas"
repository = "https://github.com/HLTAS/hltas"
keywords = ["half-life", "goldsource", "hltas", "tas", "parser"]
categories = ["game-engines", "games", "parser-implementations", "parsing"]

[dependencies]
nom = "5.0.1"
cookie-factory = "0.3.0"

[[bin]]
name = "parse"
path = "src/bin/parse.rs"

[[bin]]
name = "read-write"
path = "src/bin/read_write.rs"
