[package]
name = "hltas"
version = "0.5.0" # remember to update html_root_url
authors = [
    "Ivan Molodetskikh <yalterz@gmail.com>",
    "Chong Jiang Wei <randolphchong@gmail.com>",
]
edition = "2018"
description = "Reading and writing Half-Life TAS scripts (`.hltas`)."
license = "MIT/Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/hltas"
repository = "https://github.com/HLTAS/hltas"
keywords = ["half-life", "goldsource", "hltas", "tas", "parser"]
categories = ["game-engines", "games", "parser-implementations", "parsing"]

[workspace]
members = [
    "hltas-cpp-bridge",
]

[dependencies]
nom = "5.0.1"
cookie-factory = "0.3.0"
serde = { version = "1.0.133", features = ["derive"], optional = true }
proptest-derive = { version = "0.3.0", optional = true }
proptest = { version = "1.0.0", optional = true }

[features]
default = []
serde1 = ["serde"]
proptest1 = ["proptest", "proptest-derive"]

[[bin]]
name = "parse"
path = "src/bin/parse.rs"

[[bin]]
name = "read-write"
path = "src/bin/read_write.rs"
